--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,15 @@
 buildscript {
     repositories {
         jcenter()
-        mavenCentral()
-        mavenLocal()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.13.2'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta6'
     }
 }
 
 allprojects {
-    apply plugin: 'maven'
-    apply plugin: 'maven-publish'
-
     repositories {
         jcenter()
-        mavenCentral()
-        mavenLocal()
     }
 }
