--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,20 @@
-include ':library'
-include ':sample'
+def moduleName = "works-util"
+def moduleRoot = rootProject.projectDir
+def loadSmallApp = true
 
-project(":library").name = "works-util"
+def modulesFile = new File(rootProject.projectDir, "modules.json")
+if (modulesFile.exists()) {
+    def json = new groovy.json.JsonSlurper()
+    def configuration = json.parse(modulesFile)
+
+    configuration.modules.each {
+        module ->
+            if (module.name.equals(moduleName)) {
+                moduleRoot = new File(rootProject.projectDir, module.path)
+                loadSmallApp = module.smallapp == null || module.smallapp
+            }
+    }
+}
+
+include ':works-util'
+project(':works-util').projectDir = new File(moduleRoot, 'library')
